# crautos-scrapper

./: .gitignore  CONTRIBUTING.md  README.md  crautos-scrapper.py  pyproject.toml  requirements.txt  run_scraper.py
.github/workflows/: lint.yml  scrape.yml
src/crautos_scrapper/: __init__.py  __main__.py  models.py  scraper.py
tests/: conftest.py  test_clean_numeric.py  test_parse_price.py  test_parse_year.py  test_process_results.py  test_unify_mileage.py
