[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crautos-scrapper"
version = "0.1.0"
description = "Async Python scraper for used car listings on crautos.com"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "httpx",
    "beautifulsoup4",
    "pandas",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pre-commit",
]

[project.scripts]
crautos-scrapper = "crautos_scrapper.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
